--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-n": "^17.0.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "typescript": "^5.4.5",
+    "ts-node": "^10.9.2"
   }
 }
