--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,8 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "prettier": "^3.3.3",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "typescript": "^5.4.5",
+    "ts-node": "^10.9.2"
   }
 }
